fix: navbar collapse

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -156,6 +156,8 @@ a {
 	--primary-background: #1b1b1b;
 	--primary-background: #0b0c0d;
     --primary-background: #212529;
+    --primary-background: #212121;
+    --primary-background: #080808;
 	--secondary-background: #070707;
 	--secondary-background: #1F2428;
 	--secondary-background: #1B1F22;
