--- a/styles/projects.module.css
+++ b/styles/projects.module.css
@@ -1,6 +1,6 @@
 .projects-main-container {
 	width: 100%;
-	background-color: var(--primary-background);
+	/* background-color: var(--primary-background); */
 	padding-top: 84px;
 	padding-bottom: 12.25rem;
 	margin-bottom: 0;
